Use base R pipe operator rather than magrittr pipe

--- a/vignettes/advanced_flashier.Rmd
+++ b/vignettes/advanced_flashier.Rmd
@@ -40,10 +40,10 @@ In addition to the main `flash()` function, `flashier` provides a collection of 
 
 # Pipeable interface:
 t_backfit <- system.time(
-  fit_backfit <- flash_init(gtex, var_type = 2) %>%
-    flash_set_verbose(verbose = 0) %>%
-    flash_greedy(Kmax = 5) %>%
-    flash_backfit() %>%
+  fit_backfit <- flash_init(gtex, var_type = 2) |>
+    flash_set_verbose(verbose = 0) |>
+    flash_greedy(Kmax = 5) |>
+    flash_backfit() |>
     flash_nullcheck()
 )
 ```
@@ -59,13 +59,13 @@ Since the pipeable interface modularizes operations, it is possible to perform m
 
 ```{r cust_order_ops}
 # Pipeable interface:
-fit_multiple_backfits <- flash_init(gtex, var_type = 2) %>%
-  flash_set_verbose(verbose = 0) %>%
-  flash_greedy(Kmax = 3) %>%
-  flash_backfit() %>%
-  flash_nullcheck() %>%
-  flash_greedy(Kmax = 2) %>%
-  flash_backfit() %>%
+fit_multiple_backfits <- flash_init(gtex, var_type = 2) |>
+  flash_set_verbose(verbose = 0) |>
+  flash_greedy(Kmax = 3) |>
+  flash_backfit() |>
+  flash_nullcheck() |>
+  flash_greedy(Kmax = 2) |>
+  flash_backfit() |>
   flash_nullcheck()
 
 c(one_bf_elbo = fit_backfit$elbo, two_bf_elbo = fit_multiple_backfits$elbo)
@@ -79,9 +79,9 @@ Here, we do not obtain an improvement in ELBO, but results will vary from one sc
 Function `flash()` always only uses the greedy algorithm as initialization for the backfitting algorithm. By using function `flash_factors_init()` within a pipeline, we can instead initialize factor/loadings pairs all at once via `svd()` (or any other method) and then subsequently backfit. As argument, `flash_factors_init()` takes a list of two matrices (interpreted as $L$ and $F$) or an "SVD-like object" (that is, a list containing fields `u`, `d`, and `v`), so that the output of function `svd()` can be passed in directly:
   
 ```{r init.factors}
-fit_alternative_backfit <- flash_init(gtex, var_type = 2) %>%
-  flash_set_verbose(verbose = 0) %>%
-  flash_factors_init(svd(gtex, nu = 5, nv = 5)) %>%
+fit_alternative_backfit <- flash_init(gtex, var_type = 2) |>
+  flash_set_verbose(verbose = 0) |>
+  flash_factors_init(svd(gtex, nu = 5, nv = 5)) |>
   flash_backfit(verbose = 0)
 c(bf_elbo = fit_backfit$elbo, alt_bf_elbo = fit_alternative_backfit$elbo)
 ```
@@ -95,10 +95,10 @@ To accelerate backfits, `flashier` uses an "extrapolation" technique inspired by
 
 ```{r no.extrap}
 t_no_extrapolate <- system.time(
-  fit_no_extrapolate <- flash_init(gtex, var_type = 2) %>%
-    flash_set_verbose(verbose = 0) %>%
-    flash_greedy(Kmax = 5) %>%
-    flash_backfit(extrapolate = FALSE) %>%
+  fit_no_extrapolate <- flash_init(gtex, var_type = 2) |>
+    flash_set_verbose(verbose = 0) |>
+    flash_greedy(Kmax = 5) |>
+    flash_backfit(extrapolate = FALSE) |>
     flash_nullcheck()
 )
 c(extrapolate_elbo = fit_backfit$elbo, no_extrapolate_elbo = fit_no_extrapolate$elbo)
@@ -116,11 +116,11 @@ c(t_extrapolate = t_backfit[3], t_no_extrapolate = t_no_extrapolate[3])
 In many applications, it is useful to add an "intercept" term to account for, say, differences in mean values from row to row. Here, an intercept might be used to capture effects that are exactly equally shared across all tissues (similar to what is captured by the first factor from previous fits, except that factor values are constrained to be exactly equal rather than estimated as approximately so):
 
 ```{r intercept}
-fit_with_intercept <- flash_init(gtex, var_type = 2) %>%
-  flash_set_verbose(verbose = 0) %>%
-  flash_add_intercept(rowwise = FALSE) %>%
-  flash_greedy(Kmax = 4) %>%
-  flash_backfit() %>%
+fit_with_intercept <- flash_init(gtex, var_type = 2) |>
+  flash_set_verbose(verbose = 0) |>
+  flash_add_intercept(rowwise = FALSE) |>
+  flash_greedy(Kmax = 4) |>
+  flash_backfit() |>
   flash_nullcheck()
 
 p1 <- plot(
@@ -144,11 +144,11 @@ In essence, `flash_add_intercept()` is a convenience function that initializes t
 ones <- matrix(1, nrow = ncol(gtex), ncol = 1)
 init_loadings <- matrix(rowMeans(gtex), ncol = 1)
 
-fit_with_intercept <- flash_init(gtex, var_type = 2) %>%
-  flash_set_verbose(0) %>%
-  flash_factors_init(list(init_loadings, ones)) %>%
-  flash_factors_fix(kset = 1, which_dim = "factors") %>%
-  flash_greedy(Kmax = 4) %>%
+fit_with_intercept <- flash_init(gtex, var_type = 2) |>
+  flash_set_verbose(0) |>
+  flash_factors_init(list(init_loadings, ones)) |>
+  flash_factors_fix(kset = 1, which_dim = "factors") |>
+  flash_greedy(Kmax = 4) |>
   flash_backfit()
 ```
 
@@ -161,15 +161,15 @@ Many more options are possible using `flash_factors_init()` in conjunction with 
 is_brain <- grepl("Brain", colnames(gtex))
 init_loadings <- rowMeans(gtex[, is_brain]) - rowMeans(gtex[, !is_brain])
 
-fit_fixed_pattern <- flash_init(gtex, var_type = 2) %>%
-  flash_set_verbose(0) %>%
-  flash_add_intercept(rowwise = FALSE) %>%
+fit_fixed_pattern <- flash_init(gtex, var_type = 2) |>
+  flash_set_verbose(0) |>
+  flash_add_intercept(rowwise = FALSE) |>
   flash_factors_init(list(matrix(init_loadings, ncol = 1),
-                          matrix(is_brain, ncol = 1))) %>%
+                          matrix(is_brain, ncol = 1))) |>
   flash_factors_fix(kset = 2, 
                     which_dim = "factors", 
-                    fixed_idx = !is_brain) %>%
-  flash_greedy(3) %>%
+                    fixed_idx = !is_brain) |>
+  flash_greedy(3) |>
   flash_backfit()
 
 plot(
@@ -188,14 +188,14 @@ By default, the greedy and backfitting algorithms terminate when the variational
 If we were primarily interested in factor values rather than loadings, then we might like to terminate when their normalized absolute values no longer change by more than, say, .001. To confirm that this criterion is respected, we also modify the output printed to console using function `flash_set_verbose()`:
 
 ```{r conv.crit}
-gtex_conv_crit <- flash_init(gtex, var_type = 2) %>%
-  flash_set_conv_crit(fn = flash_conv_crit_max_chg_F, tol = .001) %>%
+gtex_conv_crit <- flash_init(gtex, var_type = 2) |>
+  flash_set_conv_crit(fn = flash_conv_crit_max_chg_F, tol = .001) |>
   flash_set_verbose(
     fns = c(flash_verbose_elbo, flash_verbose_max_chg_F),
     colnames = c("ELBO", "Max.Chg.Factors"),
     colwidths = c(18, 18)
-  ) %>%
-  flash_greedy(Kmax = 3) %>%
+  ) |>
+  flash_greedy(Kmax = 3) |>
   flash_backfit()
 ```
 
@@ -220,15 +220,15 @@ verbose_sprs3 <- function(new, old, k) verbose_sparsity(new, old, k, 3)
 verbose_sprs4 <- function(new, old, k) verbose_sparsity(new, old, k, 4)
 verbose_sprs5 <- function(new, old, k) verbose_sparsity(new, old, k, 5)
 
-fit_monitor_sparsity <- flash_init(gtex, var_type = 2) %>%
-  flash_set_verbose(0) %>%
-  flash_greedy(Kmax = 5) %>%
+fit_monitor_sparsity <- flash_init(gtex, var_type = 2) |>
+  flash_set_verbose(0) |>
+  flash_greedy(Kmax = 5) |>
   flash_set_verbose(
     verbose = 3,
     fns = c(flash_verbose_elbo, verbose_sprs2, verbose_sprs3, verbose_sprs4, verbose_sprs5),
     colnames = c("ELBO", paste0("Sparsity (", 2:5, ")")),
     colwidths = rep(14, 5)
-  ) %>%
+  ) |>
   flash_backfit()
 ```
 
@@ -238,9 +238,9 @@ fit_monitor_sparsity <- flash_init(gtex, var_type = 2) %>%
 Custom EBNM functions may also be created when specialized prior families are required. Often it is sufficient to use the helper function `flash_ebnm` to pass non-default arguments to function `ebnm()` in package `ebnm`. For example, we might choose to put a normal prior on the first factor with mode to be estimated (since we do not expect the first factor to be sparse):
 
 ```{r normal.est.mode}
-fit_flash_ebnm <- flash_init(gtex, var_type = 2) %>%
-  flash_set_verbose(0) %>%
-  flash_greedy(ebnm_fn = flash_ebnm(prior_family = "normal", mode = "estimate")) %>%
+fit_flash_ebnm <- flash_init(gtex, var_type = 2) |>
+  flash_set_verbose(0) |>
+  flash_greedy(ebnm_fn = flash_ebnm(prior_family = "normal", mode = "estimate")) |>
   flash_greedy(Kmax = 4, ebnm_fn = ebnm_point_normal)
 
 fit_flash_ebnm$F_ghat[[1]]
@@ -288,8 +288,8 @@ ebnm_custom <- function(x, s, g_init, fix_g, output) {
   return(ebnm_res)
 }
 
-fit_custom <- flash_init(gtex, var_type = 2) %>%
-  flash_set_verbose(0) %>%
+fit_custom <- flash_init(gtex, var_type = 2) |>
+  flash_set_verbose(0) |>
   flash_greedy(
     Kmax = 2,
     ebnm_fn = c(ebnm_point_normal, ebnm_custom)
@@ -305,17 +305,17 @@ Setting `verbose = -1` outputs a single tab-delimited table of values that makes
 
 ```{r plot.history, eval = FALSE}
 sink("zz.tsv")
-tmp <- flash_init(gtex, var_type = 2) %>%
-  flash_set_verbose(-1) %>%
-  flash_factors_init(svd(gtex, nu = 5, nv = 5)) %>%
+tmp <- flash_init(gtex, var_type = 2) |>
+  flash_set_verbose(-1) |>
+  flash_factors_init(svd(gtex, nu = 5, nv = 5)) |>
   flash_backfit()
 progress_extrapolate <- read.delim("zz.tsv")
 sink()
 
 sink("zz.tsv")
-tmp <- flash_init(gtex, var_type = 2) %>%
-  flash_set_verbose(-1) %>%
-  flash_factors_init(svd(gtex, nu = 5, nv = 5)) %>%
+tmp <- flash_init(gtex, var_type = 2) |>
+  flash_set_verbose(-1) |>
+  flash_factors_init(svd(gtex, nu = 5, nv = 5)) |>
   flash_backfit(extrapolate = FALSE)
 progress_no_extrapolate <- read.delim("zz.tsv")
 sink()
@@ -323,18 +323,18 @@ sink()
 rm(tmp)
 file.remove("zz.tsv")
 
-progress_extrapolate <- progress_extrapolate %>%
-  mutate(Extrapolate = TRUE) %>%
+progress_extrapolate <- progress_extrapolate |>
+  mutate(Extrapolate = TRUE) |>
   select(Iter, ELBO, Extrapolate)
 
-progress_no_extrapolate <- progress_no_extrapolate %>%
-  group_by(Iter) %>%
-  summarize(ELBO = max(ELBO, na.rm = TRUE)) %>%
-  ungroup() %>%
+progress_no_extrapolate <- progress_no_extrapolate |>
+  group_by(Iter) |>
+  summarize(ELBO = max(ELBO, na.rm = TRUE)) |>
+  ungroup() |>
   mutate(Extrapolate = FALSE)
 
-tib <- progress_extrapolate %>%
-  bind_rows(progress_no_extrapolate) %>%
+tib <- progress_extrapolate |>
+  bind_rows(progress_no_extrapolate) |>
   mutate(Iter = as.numeric(Iter),
          ELBO = as.numeric(ELBO))
 
